implement array algorithms

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(tests
         transforms.cpp
         units.cpp
         vec.cpp
+        array_algorithms.cpp
 )
 enable_warnings(tests WARNINGS_AS_ERRORS_OFF)
 enable_sanitizers(tests ON ON ON OFF OFF)
