--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,5 @@ add_subdirectory(src)
 if (CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME AND BUILD_TESTING)
     add_subdirectory(tests)
 endif ()
+
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DGMATH_DEBUG")
